@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mymovies.it"
        name="MyMovies.it"
-       version="2.0.4"
+       version="2.1.0"
        provider-name="muttley">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="1.0.0"/>
+    <import addon="metadata.common.themoviedb.org" version="2.9.0"/>
+    <import addon="metadata.common.imdb.com" version="2.7.0"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="it"
